<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveLife</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_no">"Mobile No : "</string>
    <string name="enter_your_mobile_no_hint">Enter your mobile no</string>
    <string name="login_your_blood_group">Your Blood Group :</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log In</string>
    <string name="quick_search_textview">Quick Search</string>
    <string name="log_in_panel">Log In Panel</string>
    <string name="title_activity_registration">Registration Form</string>
    <string name="donar_register_name">Name :</string>
    <string name="mobile_no_1">Mobile No 1 :</string>
    <string name="mobile_no_2">Mobile No 2 :</string>
    <string name="donar_address">Address :</string>
    <string name="donar_password">Password</string>
    <string name="ok_complete_register">OK</string>
    <string name="cancel_register">Cancel</string>
    <string name="registration_form">Registration Form</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="call_to_donar">Call to donar</string>
    <string name="sms_to_donar">SMS to donar</string>

</resources>
